# SPM-project

./: .gitignore  CMakeLists.txt  CMakeLists_numa.txt  README:txt
include/: utils.hpp
src/: ff_farm_wf.cpp  ff_parallel_wf.cpp  ff_parallel_wf_T.cpp  mpi_wf  mpi_wf.cpp  sequential.cpp  sequential_wf.cpp  wf-farm.cpp  wf-parallel.cpp  wf-sequential.cpp
test/: speedup copy.ipynb  speedup.ipynb  test_correctness.sh  test_mpi.sh  test_mpi_4_nodes.sh  test_mpi_8_nodes.sh  test_mpi_correctness.sh  test_mpi_nodes.sh  test_speedup.sh  test_speedup_remote.sh  test_workers.sh
